GNOME Bugzilla – Bug 763862
mxfmux: Instead of releasing request pads on stop(), clear them only
Last modified: 2016-03-29 07:34:10 UTC
See commit message
Created attachment 324252 [details] [review] mxfmux: Instead of releasing request pads on stop(), clear them only Request pads are requested by applications and as such should only be released by them again. Instead of releasing them when stopping the muxer, just clear their state so that they can be used again when starting the muxer again.
Attachment 324252 [details] pushed as cc1feff - mxfmux: Instead of releasing request pads on stop(), clear them only